// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FixedHeightPage /> @renders should render \`children\` 1`] = `
<div
  className="FixedHeightPage"
>
  <p>
    Child
  </p>
</div>
`;

exports[`<FixedHeightPage /> @renders should render in default state 1`] = `
<div
  className="FixedHeightPage"
/>
`;
